--- a/webfortoapp/templates/webfortoapp/index.html
+++ b/webfortoapp/templates/webfortoapp/index.html
@@ -48,9 +48,9 @@
                     <div class="row g-0">
                         <div class="col-md-6">
                             <div class="text-white p-4 p-md-5">
-                                <h2 class="fw-bold text-white mb-3">Sponsor our Project</h2>
-                                <p class="mb-4">Support and sponsor our open-source python project.</p>
-                                <div class="my-3"><a class="btn btn-light btn-lg" role="button" href="https://github.com/sponsors/regiapriandi012/" target="_blank">Github Sponsor</a>&nbsp;&nbsp;<a class="btn btn-primary btn-lg me-2" role="button" href="https://paypal.me/regiapriandi012" target="_blank">Support Paypal</a></div>
+                                <h2 class="fw-bold text-white mb-3">Sponsor to our Project</h2>
+                                <p class="mb-4">Support and sponsor to our open-source python project.</p>
+                                <div class="my-3"><a class="btn btn-light btn-lg" role="button" href="https://github.com/sponsors/regiapriandi012/" target="_blank" style="margin: 0 20px 20px 0;">Github Sponsor</a><a class="btn btn-primary btn-lg me-2" role="button" href="https://paypal.me/regiapriandi012" target="_blank" style="margin: 0 20px 20px 0;">Support Paypal</a></div>
                             </div>
                         </div>
                         <div class="col-md-6 order-first order-md-last" style="min-height: 250px; padding: 10px;"><img style="height: 100%; width: 100%" src="https://github-readme-stats.vercel.app/api?username=regiapriandi012&show_icons=true&theme=dark"></div>
